--- a/themes/kadyn/sass/style.scss
+++ b/themes/kadyn/sass/style.scss
@@ -1,1 +1,8 @@
+@import "variables";
+@import "mixins";
+@import "normalize";
+@import "fonts";
+@import "typography";
+@import "elements";
+@import "forms";
 @import "front_page";
