--- a/themes/kadyn/sass/_front_page.scss
+++ b/themes/kadyn/sass/_front_page.scss
@@ -18,6 +18,10 @@ header{
 
         }
 
+.creativity{
+    height: 100vh;
+}
+
 // Self looking up
 .kadyn{
     display: flex;
@@ -43,4 +47,22 @@ header{
 .thoughtBubble:first-child{
     transform: scaleX(-1);
 }
+}
+
+// Projects Area
+
+.projects{
+    .projectDisplay{
+        width: 100%;
+        height: 300px;
+        background-color: black;
+        display: flex;
+        align-items: center;
+        margin-top: 5px;
+        margin-bottom: 5px;
+    
+    h1{
+        margin: .5rem;
+        }
+    }
 }
