--- a/themes/kadyn/style.css
+++ b/themes/kadyn/style.css
@@ -329,6 +329,9 @@ header {
   width: 100px;
   height: 20px; }
 
+.creativity {
+  height: 100vh; }
+
 .kadyn {
   display: -ms-flexbox;
   display: flex;
@@ -349,3 +352,16 @@ header {
     height: 20%; }
   .thoughts .thoughtBubble:first-child {
     transform: scaleX(-1); }
+
+.projects .projectDisplay {
+  width: 100%;
+  height: 300px;
+  background-color: black;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+      align-items: center;
+  margin-top: 5px;
+  margin-bottom: 5px; }
+  .projects .projectDisplay h1 {
+    margin: .5rem; }
