--- a/themes/kadyn/sass/_front_page.scss
+++ b/themes/kadyn/sass/_front_page.scss
@@ -5,13 +5,29 @@ body{
 
 header{
     text-align: center;
+    margin: 0 auto;
+    background-color: darkred;
+    display: flex;
+    justify-content: center;
     h1{
         font-size: 4rem;
         margin-bottom: .25rem;
+        margin-top: 0;
 
     }
 }
 
+header{
+    .title{
+        background-color: white;
+        width: 500px;
+        margin-top: 20px;
+        border: 3px solid black;
+    h3{
+        margin: 0;
+        }
+    }
+}
     .redHeader{
         width: 100px;
         height: 20px;
@@ -20,6 +36,7 @@ header{
 
 .creativity{
     height: 100vh;
+    background-color:darkred;
 }
 
 // Self looking up
@@ -38,6 +55,7 @@ header{
 .thoughts{
     display: flex;
     justify-content: center;
+    align-items: center;
 
 .thoughtBubble{
     width:20%;
@@ -55,14 +73,38 @@ header{
     .projectDisplay{
         width: 100%;
         height: 300px;
-        background-color: black;
+        background-color: grey;
         display: flex;
         align-items: center;
         margin-top: 5px;
         margin-bottom: 5px;
     
-    h1{
+    h2{
         margin: .5rem;
+        color: black;
         }
+    }
+}
+
+.projects{
+    .projectsTitle{
+        text-align: center;
+    }
+}
+
+.projects{
+    .projectImage{
+        border:3px solid black;
+        margin-left: 30px;
+        height: 150px;
+        width: 250px;
+    }
+}
+
+//Bio
+
+.aboutMe{
+    h2{
+    text-align: center;
     }
 }
