made some style changes to header

--- a/themes/kadyn/sass/_front_page.scss
+++ b/themes/kadyn/sass/_front_page.scss
@@ -8,7 +8,11 @@ header{
     margin: 0 auto;
     background-color: darkred;
     display: flex;
-    justify-content: center;
+    width: 100%;
+    position: fixed;
+    z-index: 2;
+    border: 2px solid black;
+
     h1{
         font-size: 4rem;
         margin-bottom: .25rem;
@@ -20,12 +24,19 @@ header{
 header{
     .title{
         background-color: white;
-        width: 500px;
-        margin-top: 20px;
+        width: 25%;
         border: 3px solid black;
     h3{
         margin: 0;
         }
+    }
+}
+
+header{
+    .menu{
+       display: flex;
+       justify-content: space-around;
+       width: 37.5%;
     }
 }
     .redHeader{
@@ -37,6 +48,7 @@ header{
 .creativity{
     height: 100vh;
     background-color:darkred;
+    padding-top: 154px;
 }
 
 // Self looking up
