--- a/themes/kadyn/sass/_front_page.scss
+++ b/themes/kadyn/sass/_front_page.scss
@@ -6,28 +6,29 @@ body{
 header{
     text-align: center;
     margin: 0 auto;
-    background-color: darkred;
+    background-color: #070709;
     display: flex;
     width: 100%;
     position: fixed;
     z-index: 2;
-    border: 2px solid black;
+    border-bottom: 2px solid #E8DFE0;
 
     h1{
         font-size: 4rem;
         margin-bottom: .25rem;
         margin-top: 0;
+        color:$body_font;
 
     }
 }
 
 header{
     .title{
-        background-color: white;
+        background-color: $main_color_four;
         width: 25%;
-        border: 3px solid black;
-    h3{
+    h3,p{
         margin: 0;
+        color:$body_font;
         }
     }
 }
@@ -37,6 +38,9 @@ header{
        display: flex;
        justify-content: space-around;
        width: 37.5%;
+       h3{
+           color:$body_font;
+       }
     }
 }
     .redHeader{
@@ -47,7 +51,7 @@ header{
 
 .creativity{
     height: 100vh;
-    background-color:darkred;
+    background-color:#0E0A18;
     padding-top: 154px;
     display: flex;
     justify-content: center;
@@ -55,22 +59,25 @@ header{
         width: 25%;
         height: 325px;
         text-align: center;
-        background-color: darkorange;
-        border-top:3px solid black;
-        border-bottom: 3px solid black;
+        background-color: #4916F7;
+        border-top:3px solid #E8DFE0;
+        border-bottom: 3px solid #E8DFE0;
+        p,h2{
+            color: #E8DFE0;
+        }
     }
 
 }
 
 .creativity{
     .introText:first-child{
-        border-left: 3px solid black;
+        border-left: 3px solid #E8DFE0;
     }
 }
 
 .creativity{
     .introText:last-child{
-        border-right: 3px solid black;
+        border-right: 3px solid #E8DFE0;
     }
 }
 
@@ -80,11 +87,12 @@ header{
     justify-content: center;
     width: 25%;
     height: 710px;
-
+    background: rgba(0,0,255, 0.5);
+      
     .kadynSelfie{
         height: 100%;
         width:100%;
-        border: 3px solid black;
+        border: 3px solid #E8DFE0;
     }
 }
 
@@ -111,7 +119,7 @@ header{
     .projectDisplay{
         width: 100%;
         height: 300px;
-        background-color: grey;
+        background-color: $main_color_two;
         display: flex;
         align-items: center;
         margin-top: 5px;
@@ -119,8 +127,17 @@ header{
     
     h2{
         margin: .5rem;
-        color: black;
+        color: $body_font;
         }
+    }
+}
+
+.projects{
+    .projectTitles{
+        width: 200px;
+        text-align: center;
+        background-color: $main_color_four;
+        border:2px solid black;
     }
 }
 
