--- a/themes/kadyn/sass/_variables.scss
+++ b/themes/kadyn/sass/_variables.scss
@@ -26,4 +26,9 @@ $font__line-height-body: 1.5;
 $font__line-height-pre: 1.6;
 // Our Variables 
 // font colors
+$body_font:white;
+$main_color_one:#4916F7;
+$main_color_two:#0E0A18;
+$main_color_three:#E8DFE0;
+$main_color_four:#A33ACB;
 // font sizes 
