--- a/themes/kadyn/style.css
+++ b/themes/kadyn/style.css
@@ -322,24 +322,25 @@ body {
 header {
   text-align: center;
   margin: 0 auto;
-  background-color: darkred;
+  background-color: #070709;
   display: -ms-flexbox;
   display: flex;
   width: 100%;
   position: fixed;
   z-index: 2;
-  border: 2px solid black; }
+  border-bottom: 2px solid #E8DFE0; }
   header h1 {
     font-size: 4rem;
     margin-bottom: .25rem;
-    margin-top: 0; }
+    margin-top: 0;
+    color: white; }
 
 header .title {
-  background-color: white;
-  width: 25%;
-  border: 3px solid black; }
-  header .title h3 {
-    margin: 0; }
+  background-color: #A33ACB;
+  width: 25%; }
+  header .title h3, header .title p {
+    margin: 0;
+    color: white; }
 
 header .menu {
   display: -ms-flexbox;
@@ -347,6 +348,8 @@ header .menu {
   -ms-flex-pack: distribute;
       justify-content: space-around;
   width: 37.5%; }
+  header .menu h3 {
+    color: white; }
 
 .redHeader {
   width: 100px;
@@ -354,7 +357,7 @@ header .menu {
 
 .creativity {
   height: 100vh;
-  background-color: darkred;
+  background-color: #0E0A18;
   padding-top: 154px;
   display: -ms-flexbox;
   display: flex;
@@ -364,15 +367,17 @@ header .menu {
     width: 25%;
     height: 325px;
     text-align: center;
-    background-color: darkorange;
-    border-top: 3px solid black;
-    border-bottom: 3px solid black; }
+    background-color: #4916F7;
+    border-top: 3px solid #E8DFE0;
+    border-bottom: 3px solid #E8DFE0; }
+    .creativity .introText p, .creativity .introText h2 {
+      color: #E8DFE0; }
 
 .creativity .introText:first-child {
-  border-left: 3px solid black; }
+  border-left: 3px solid #E8DFE0; }
 
 .creativity .introText:last-child {
-  border-right: 3px solid black; }
+  border-right: 3px solid #E8DFE0; }
 
 .kadyn {
   display: -ms-flexbox;
@@ -380,11 +385,12 @@ header .menu {
   -ms-flex-pack: center;
       justify-content: center;
   width: 25%;
-  height: 710px; }
+  height: 710px;
+  background: rgba(0, 0, 255, 0.5); }
   .kadyn .kadynSelfie {
     height: 100%;
     width: 100%;
-    border: 3px solid black; }
+    border: 3px solid #E8DFE0; }
 
 .thoughts {
   display: -ms-flexbox;
@@ -402,7 +408,7 @@ header .menu {
 .projects .projectDisplay {
   width: 100%;
   height: 300px;
-  background-color: grey;
+  background-color: #0E0A18;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-align: center;
@@ -411,7 +417,13 @@ header .menu {
   margin-bottom: 5px; }
   .projects .projectDisplay h2 {
     margin: .5rem;
-    color: black; }
+    color: white; }
+
+.projects .projectTitles {
+  width: 200px;
+  text-align: center;
+  background-color: #A33ACB;
+  border: 2px solid black; }
 
 .projects .projectsTitle {
   text-align: center; }
