--- a/themes/kadyn/sass/_front_page.scss
+++ b/themes/kadyn/sass/_front_page.scss
@@ -148,9 +148,19 @@ header{
     }
 }
 
+.introCheckout:hover{
+    background-color:white;
+    color:black;
+    border-color: white;
+    a:hover{
+        color:$main_color_two;
+    }
+}
+
 // Projects Area
 
 .projects{
+    background-color: $main_color_one;
     .projectDisplay{
         width: 100%;
         height: 300px;
@@ -166,6 +176,13 @@ header{
         }
     }
 }
+
+    .projects{
+        h2{
+            margin:0;
+            color:$main_color_three;
+        }
+    }
 
 .projects{
     .projectTitles{
@@ -198,10 +215,24 @@ header{
         border: 6px solid $main_color_three;
     }
 }
+
+.projects{
+    .projectBody{
+        width:60%;
+        background-color: $main_color_one;
+        border: 3px solid $main_color_three;
+        height: 150px;
+        margin-left: 40px;
+    }
+}
 //Bio
 
 .aboutMe{
+    background-color: $main_color_one;
+    height: 600px;
     h2{
+    color: $main_color_three;
     text-align: center;
+    margin:0;
     }
 }
