--- a/themes/kadyn/style.css
+++ b/themes/kadyn/style.css
@@ -541,3 +541,50 @@ header .menu {
   background-color: #0E0A18; }
   .outLinks h2 {
     margin: 0; }
+
+.bobbing {
+  position: absolute;
+  animation-name: bobbingAnim;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  animation-play-state: running;
+  -webkit-animation-name: bobbingAnim;
+  -webkit-animation-duration: 1.2s;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-play-state: running; }
+
+@keyframes bobbingAnim {
+  0% {
+    transform: translate(0px, 0px);
+    animation-timing-function: ease-in-out; }
+  50% {
+    transform: translate(0px, 12px);
+    animation-timing-function: ease-in-out; }
+  100% {
+    transform: translate(0px, 0px);
+    animation-timing-function: ease-in-out; } }
+
+@keyframes pulse_animation {
+  0% {
+    transform: scale(1); }
+  30% {
+    transform: scale(1); }
+  40% {
+    transform: scale(1.08); }
+  50% {
+    transform: scale(1); }
+  60% {
+    transform: scale(1); }
+  70% {
+    transform: scale(1.05); }
+  80% {
+    transform: scale(1); }
+  100% {
+    transform: scale(1); } }
+
+.pulse {
+  animation-name: pulse_animation;
+  animation-duration: 2000ms;
+  transform-origin: 70% 70%;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear; }
